# wasm2x86

./: .clangformat  .gitignore  CMakeLists.txt  Readme.md  bench_driver.c  bench_driver.js  index.html  ispc_cmp.sh  ispc_perf.sh  main.cpp  mandelbrot_ispc.ispc  mandelbrot_serial.cpp  perf.sh  runwat.sh  test.wat  wat2x86.sh  wat_perf.sh
tests/: mandelbrot.ispc  simd_array_add_1.wat  simd_array_mul.ispc  simd_array_mul_1.wat
tests/mandelbox_issue/: build.sh  ispcRunner.cpp  print_ppm.cpp  program.h  program_fixed.ispc  run.js  runner.ispc  spirvcross_stdlib.ispc
