project(v8_asm)
cmake_minimum_required(VERSION 3.0)
link_directories(${V8_PATH}/out.gn/x64.release.sample/obj)
include_directories(
    ${V8_PATH}
    ${V8_PATH}/out.gn/x64.release.sample/gen
    ${V8_PATH}/include
    )
add_executable(main
    main.cpp
    )

set(CMAKE_CXX_FLAGS "-w -fmax-errors=1 -DENABLE_DISASSEMBLER -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DV8_TYPED_ARRAY_MAX_SIZE_IN_HEAP=64 -DENABLE_GDB_JIT_INTERFACE -DENABLE_MINOR_MC -DV8_INTL_SUPPORT -DENABLE_HANDLE_ZAPPING -DV8_CONCURRENT_MARKING -DV8_ENABLE_LAZY_SOURCE_POSITIONS -DV8_EMBEDDED_BUILTINS -DV8_WIN64_UNWINDING_INFO -DV8_ENABLE_REGEXP_INTERPRETER_THREADED_DISPATCH -DV8_SNAPSHOT_COMPRESSION -DV8_COMPRESS_POINTERS -DV8_31BIT_SMIS_ON_64BIT_ARCH -DV8_DEPRECATION_WARNINGS -DV8_IMMINENT_DEPRECATION_WARNINGS -DV8_TARGET_ARCH_X64 -DV8_HAVE_TARGET_OS -DV8_TARGET_OS_LINUX -DDISABLE_UNTRUSTED_CODE_MITIGATIONS -DV8_COMPRESS_POINTERS  -g")
target_link_libraries(main v8_monolith pthread)